PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-120_division_invalide4/gcc-compile.txt
input.c:3:12: error: expected expression
    return /2;
           ^
1 error generated.

return code: 1
